--- a/css/setup.css
+++ b/css/setup.css
@@ -7,6 +7,7 @@
   --color-purple: #7341d8;
   --color-orange: #fb8200;
   --color-brown: #544235;
+  --color-blue-dark: #0F3046;
   --color-shadow: 0 3px 6px rgba(141, 107, 80, 0.1);
   --color-shadow-hovered: 0 5px 10px rgba(141, 107, 80, 0.5);
   --size-max-width: 320px;
@@ -27,6 +28,36 @@ body {
 
 button {
   cursor: pointer;
+}
+
+
+
+.setup-back-wrapper {
+  max-width: var(--size-max-width);
+  margin: 0 auto;
+  z-index: 1;
+  position: relative;
+}
+
+.create-back-container {
+  max-width: var(--size-max-width);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  margin-left: 0px;
+  width: 250px;
+  justify-self: left;
+  justify-items: left;
+}
+
+.create-back-desc a {
+  color: var(--color-blue-dark);
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center; 
+  gap: 8px;
 }
 
 .setup-page-wrapper {
