--- a/css/setting.css
+++ b/css/setting.css
@@ -204,6 +204,7 @@ button, a {
   align-items: center;
   padding: 10px;
   gap: 10px;
+  box-shadow: var(--color-shadow);
 }
 
 .setting-general-frame {
