--- a/css/setting.css
+++ b/css/setting.css
@@ -14,8 +14,8 @@
   font-display: swap;
 }
 @font-face {
-  font-family: "rubik-light";
-  src: url("../font/Rubik-Light.ttf");
+  font-family: "rubik-regular";
+  src: url("../font/Rubik-Regular.ttf");
   font-display: swap;
 }
 
@@ -33,6 +33,7 @@
   --font-bold: rubik-bold;
   --font-semibold: rubik-semibold;
   --font-medium: rubik-medium;
+  --font-regular: rubik-regular;
 }
 
 * {
@@ -163,6 +164,7 @@ button, a {
   color: var(--color-blue);
   text-align: center;
   font-size: 0.8rem;
+  font-family: var(--font-regular);
 }
 
 .setting-profile-pic {
