--- a/css/welcome.css
+++ b/css/welcome.css
@@ -48,7 +48,7 @@ body {
 }
 
 .owl-carousel {
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
 
@@ -61,8 +61,8 @@ body {
 .carousel-item {
     height: 80%;
     position: relative;
-    padding: 20px;
-    margin-top: 30px;
+    padding: 20px 20px 0 20px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -108,6 +108,7 @@ body {
 .challenges-content {
     display: flex;
     flex-direction: column;
+    padding: 0;
 }
 
 .challenges-header {
@@ -191,9 +192,9 @@ body {
 }
 
 .carousel-bottom-text {
-    margin-top: 30px;
+    margin-top: 20px;
     text-align: left;
-    padding: 0 0 40px 0;
+    padding-bottom: 20px;
 }
 
 .placeholder-centered {
@@ -290,7 +291,6 @@ body {
 
 .owl-dots {
     position: absolute;
-    bottom: 15%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 10;
